config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  selector:
    app: wil-playground
